configdir = $(prefix)/share/gazebo/worlds

WORLDFILES = example1.world example2.world segwayrmp.world pioneer2at.world \
						 pioneer2dx.world clodbuster.world pioneer2dxGrip.world \
						 pioneer2dxSonars.world simplesolids.world textures.world terrain.world

CONFIGFILES = pioneer2dx.config pioneer2dxGrip.config pioneer2dxSonars.config

TEXTUREFILES = ahoward.jpg nkoenig.jpg grass.jpg ground.ppm sky.ppm wood.ppm example2.png \
							 grid.ppm terrain.png

config_DATA = $(WORLDFILES) $(CONFIGFILES) $(TEXTUREFILES)

EXTRA_DIST = $(WORLDFILES) $(CONFIGFILES) $(TEXTUREFILES)
